# New_Haptic_Lever

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
DebugFirmware-Arduino/Friction_Testing/: Friction_Testing.ino
DebugFirmware-Arduino/Test_Motor_GM5208_24/: Test_Motor_GM5208_24.ino
DebugFirmware-Arduino/Test_Motor_GM5208_24_Only_Motor/: Test_Motor_GM5208_24_Only_Motor.ino
DebugFirmware-Arduino/Test_Sensor_AS5048_A/: Test_Sensor_AS5048_A.ino
DebugFirmware-IDF/twai_self_test/: README.md
DebugFirmware-IDF/twai_self_test/main/: twai_self_test_example_main.c
components/: README.md
main/: CMakeLists.txt  Motor_Haptic.cpp  Motor_Haptic.h  Motor_Haptic_Function_0.cpp  Motor_Haptic_Function_1.cpp  Motor_Haptic_Function_2.cpp  Motor_Haptic_Function_3.cpp  Motor_Haptic_Function_4.cpp  app_main.cpp  utils.h
main/Motor_Haptic_Azipod_Function/: MH_Azi_Function_1.cpp
main/Motor_Haptic_Function/: MH_Function_0.cpp  MH_Function_1.cpp  MH_Function_2.cpp  MH_Function_3.cpp  MH_Function_4.cpp  MH_Function_5.cpp
